--- a/order-service.yaml
+++ b/order-service.yaml
@@ -1,1 +1,13 @@
+server:
+ port: 8084
 
+spring:
+ datasource:
+   url: jdbc:mysql://localhost:3306/order_db
+   username: root
+   password: Dhira123@@#$
+ jpa:
+   hibernate:
+     ddl-auto: update
+ application:
+   name: ORDER-SERVICE
