--- a/application.yaml
+++ b/application.yaml
@@ -1,1 +1,13 @@
+server:
+  port: 8083
 
+spring:
+  datasource:
+    url: jdbc:mysql://localhost:3306/product_db
+    username: root
+    password: Dhira123@@#$
+  jpa:
+    hibernate:
+      ddl-auto: update
+  application:
+    name: PRODUCT-SERVICE
