--- a/order-service.yaml
+++ b/order-service.yaml
@@ -11,3 +11,12 @@ spring:
  application:
    name: ORDER-SERVICE
 
+eureka:
+  instance:
+    prefer-ip-address: true
+  client:
+    register-with-eureka: true
+    fetch-registry: true
+    service-url:
+      defaultZone: ${EUREKA_SERVER_ADDRESS:http://localhost:8761/eureka}
+
